--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@splinetool/react-spline": "^4.0.0",
     "@types/xlsx": "^0.0.35",
     "axios": "^1.7.7",
     "docx": "^9.0.3",
